--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@
   
   .top-wrapper {
 	padding: 180px 0 100px 0;
-	background-image: url(img/main_top.png);
+	background-image: url(main_top.png);
 	background-size: cover;
 	background-position: center;
 	color: #EEF0F5;
